[package]
name = "racr-compose"
version = "0.1.0"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "2.32", features = ["yaml"]}
#svd-parser = "0.6.0"
svd-parser = {git = "https://github.com/japaric/svd.git"}
racr = {git = "https://github.com/kjetilkjeka/racr-format.git", rev="07755f60462d646208b6090a40c070af7b4884ac"}
inflections = "1.1"
