[package]
name = "racr-compose"
version = "0.1.0"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "2.32", features = ["yaml"]}
#svd-parser = "0.6.0"
svd-parser = {git = "https://github.com/japaric/svd.git"}
racr = {git = "https://github.com/kjetilkjeka/racr-format.git", rev="1f8df4bb8685e874bdfbd661c18badd20804b3e7"}
inflections = "1.1"
